[Dribbblish] add "dagaugl" color scheme

--- a/Dribbblish/color.ini
+++ b/Dribbblish/color.ini
@@ -214,3 +214,21 @@ tab-active         = ebbcba
 notification       = 3281ea
 notification-error = b10c0c
 misc               = 252525
+
+[dagaugl]
+text = f8f8f2
+subtext = f8f8f2
+sidebar-text = f0f0f0
+main = 282938
+sidebar = 37394a
+player = 282a36
+card = 282a36
+shadow = 00000
+selected-row = bd93f9
+button = 41c462
+button-active = 8be9fd
+button-disabled = 535353
+tab-active = 282a36
+notification = bd93f9
+notification-error = e22134
+misc = bfbfbf
