[dribbblish] fix dagaugl colors

--- a/Dribbblish/color.ini
+++ b/Dribbblish/color.ini
@@ -224,7 +224,7 @@ sidebar = 37394a
 player = 282a36
 card = 282a36
 shadow = 00000
-selected-row = bd93f9
+selected-row = f8f8f2
 button = 41c462
 button-active = 8be9fd
 button-disabled = 535353
